Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/InvalidHeritance.ru
/? Descripción: caso de prueba que verifica que se
/? herede de las clases primitivas
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 8 | COLUMNA 12 | NO ES POSIBLE HEREDAR DE ESA CLASE

struct A : IO{
}
impl A{
.(){}}
start{}